[metadata]
name = vaultdiff
version = 0.1.0
description = CLI tool to compare and audit differences between HashiCorp Vault secret paths
long_description = file: README.md
long_description_content_type = text/markdown
author = vaultdiff contributors
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    click>=8.0
    hvac>=1.0

[options.entry_points]
console_scripts =
    vaultdiff = vaultdiff.cli:main

[options.extras_require]
dev =
    pytest>=7.0
    pytest-cov
    black
    ruff

[tool:pytest]
testpaths = tests
addopts = --tb=short

[coverage:run]
source = vaultdiff
branch = True

[coverage:report]
show_missing = True
omit =
    tests/*
